--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "mongoose": "^4.11.6"
+  },
+  "engines":{
+    "node": "^8",
+    "npm": "^5"
+
+    
   }
 }
