--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "mongoose": "^4.11.6"
   },
   "engines":{
-    "node": "^8",
-    "npm": "^5"
+    "node": ">= 8.0.0",
+    "npm": ">= 5.0.0"
 
     
   }
